<resources>
    <string name="app_name">Nmedia</string>
    <string name="Nmedia">Nmedia!</string>
    <string name="desription_post_author_avtor">Post author actor</string>
    <string name="desription_post_menu">Post menu</string>
    <string name="desription_Laik" translatable="false">Laik menu</string>
    <string name="desription_repost">repost menu</string>
    <string name="desription_eye">eye menu</string>
    <string name="menu_edit">edit</string>
    <string name="menu_remove">"delete "</string>
    <string name="post_input_hint" translatable="false">Post content</string>
    <string name="content_is_blank_error" translatable="false">Content is blank error</string>
    <string name="description_post_seve" translatable="false">условное обозначение пост сохранения</string>
    <string name="play_video" translatable="false">Плей видео</string>

</resources>